# open-trading-api

./: CLAUDE.md
examples_user/news_trading/: start_auto_trading.py
news_trading/: debug_news.py  example_auto_trading.py  example_llm_analysis.py  generate_hot_stock_report.py  generate_hot_stock_report_final.py  generate_hot_stock_report_v2.py  generate_scalping_report.py  run_auto_trader.py  run_real_trading.py  run_realtime_surge.py  run_scalping_scanner.py  scalping_dashboard.py  scalping_dashboard_v2.py  start_auto_trading.py  start_scalping_service.py  test_api_connection.py
news_trading/config/: auto_trade.yaml
news_trading/dashboard/backend/: main.py  pyproject.toml
news_trading/dashboard/backend/api/: __init__.py
news_trading/dashboard/backend/api/v1/: __init__.py  account.py  auto_trade.py  history.py  integrated_trade.py  llm.py  position.py  stream.py  surge.py
news_trading/dashboard/backend/core/: auto_trade_service.py  integrated_trade_service.py  kis_service.py  position_monitor.py  ws_service.py
news_trading/dashboard/backend/models/: account.py  history.py  llm.py  surge.py
news_trading/data/: market_analysis_20251216.json  news_analysis_20251216_082916.json  news_analysis_20251216_082957.json  news_analysis_20251216_083026.json  news_analysis_20251216_083252.json  news_analysis_20251216_083900.json
news_trading/modules/: auto_trader.py  integrated_trader.py  llm_position_manager.py  news_collector.py  ohlcv_fetcher.py  order_executor.py  realtime_monitor.py  realtime_news_trader.py  realtime_surge_detector.py  surge_detector.py  (+1 more)
(+84 files in other folders)
