[project]
name = "trading-dashboard-backend"
version = "1.0.0"
description = "Real-time trading dashboard backend with FastAPI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sse-starlette>=2.1.0",
    "websockets>=14.0",
    "httpx>=0.28.0",
    "pandas>=2.0.0",
    "requests>=2.32.0",
    "pyyaml>=6.0.0",
    "pycryptodome>=3.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
